// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtifactsPanel matches snapshot when collapsed with artifacts 1`] = `
<div>
  <div
    class="h-full bg-charcoal/80 border-l border-ash/40 flex flex-col items-center py-3 w-12 shrink-0"
  >
    <button
      aria-label="Expand artifacts panel"
      class="p-2 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150 relative"
    >
      <svg
        class="w-5 h-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.196 12.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 12.87z"
        />
        <path
          d="M3.196 8.87l-.825.483a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.758 0l7.25-4.25a.75.75 0 000-1.294l-.825-.484-5.666 3.322a2.25 2.25 0 01-2.276 0L3.196 8.87z"
        />
        <path
          d="M10.38 1.103a.75.75 0 00-.76 0l-7.25 4.25a.75.75 0 000 1.294l7.25 4.25a.75.75 0 00.76 0l7.25-4.25a.75.75 0 000-1.294l-7.25-4.25z"
        />
      </svg>
      <span
        class="absolute -top-1 -right-1 w-4 h-4 bg-gold text-obsidian text-xs font-medium flex items-center justify-center rounded-full"
      >
        2
      </span>
    </button>
  </div>
</div>
`;

exports[`ArtifactsPanel matches snapshot when expanded with artifacts 1`] = `
<div>
  <div
    class="h-full bg-charcoal/50 border-l border-ash/40 flex flex-col relative w-96 shrink-0"
    data-testid="artifacts-panel"
  >
    <div
      class="absolute top-0 left-0 w-1 h-full cursor-col-resize z-50 hover:bg-gold/50 transition-colors after:absolute after:inset-y-0 after:-left-1 after:w-2"
      data-testid="artifacts-resize-handle"
    />
    <div
      class="flex items-center justify-between p-4 border-b border-ash/40 shrink-0"
    >
      <h3
        class="text-sm font-semibold text-white"
      >
        Artifacts
      </h3>
      <button
        aria-label="Collapse artifacts panel"
        class="p-1.5 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-4 space-y-4"
      data-testid="artifacts-grid"
    >
      <div
        class="relative group cursor-pointer"
      >
        <button
          aria-label="Expand artifact"
          class="absolute top-2 right-2 z-10 p-1.5 bg-obsidian/80 text-silver hover:text-white hover:bg-obsidian opacity-0 group-hover:opacity-100 transition-opacity"
        >
          <svg
            class="w-4 h-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.28 7.78l3.22-3.22v2.69a.75.75 0 001.5 0v-4.5a.75.75 0 00-.75-.75h-4.5a.75.75 0 000 1.5h2.69l-3.22 3.22a.75.75 0 001.06 1.06zM2 17.25v-4.5a.75.75 0 011.5 0v2.69l3.22-3.22a.75.75 0 011.06 1.06L4.56 16.5h2.69a.75.75 0 010 1.5h-4.5a.75.75 0 01-.75-.75z"
            />
          </svg>
        </button>
        <div
          class="rounded-none relative transition-opacity duration-500 bg-charcoal shadow-sm border border-gold/30 p-0 overflow-hidden w-full"
        >
          <div
            class="overflow-hidden relative border-b border-ash"
          >
            <img
              alt="Test image"
              class="w-full h-full object-cover"
              src="https://example.com/image.jpg"
            />
          </div>
          <div
            class="px-6 py-4 border-b border-ash"
          >
            <div
              class="flex items-start justify-between gap-4"
            >
              <div
                class="flex-1 min-w-0"
              >
                <h3
                  class="text-lg font-semibold text-white m-0"
                >
                  Image Title
                </h3>
                <p
                  class="text-sm text-silver mt-1 m-0"
                >
                  Image subtitle
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative group cursor-pointer"
      >
        <button
          aria-label="Expand artifact"
          class="absolute top-2 right-2 z-10 p-1.5 bg-obsidian/80 text-silver hover:text-white hover:bg-obsidian opacity-0 group-hover:opacity-100 transition-opacity"
        >
          <svg
            class="w-4 h-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.28 7.78l3.22-3.22v2.69a.75.75 0 001.5 0v-4.5a.75.75 0 00-.75-.75h-4.5a.75.75 0 000 1.5h2.69l-3.22 3.22a.75.75 0 001.06 1.06zM2 17.25v-4.5a.75.75 0 011.5 0v2.69l3.22-3.22a.75.75 0 011.06 1.06L4.56 16.5h2.69a.75.75 0 010 1.5h-4.5a.75.75 0 01-.75-.75z"
            />
          </svg>
        </button>
        <div
          class="rounded-none relative transition-opacity duration-500 bg-charcoal shadow-sm border border-gold/30 p-0 overflow-hidden w-full"
        >
          <div
            class="px-6 py-4 border-b border-ash"
          >
            <div
              class="flex items-start justify-between gap-4"
            >
              <div
                class="flex-1 min-w-0"
              >
                <h3
                  class="text-lg font-semibold text-white m-0"
                >
                  Text Artifact
                </h3>
              </div>
            </div>
          </div>
          <div
            class="px-6 py-4 overflow-y-auto"
            style="max-height: 16rem;"
          >
            <div
              class="prose prose-sm prose-invert max-w-none"
            >
              <p>
                Some markdown content
              </p>
              

            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtifactsPanel matches snapshot when expanded with no artifacts 1`] = `
<div>
  <div
    class="h-full bg-charcoal/50 border-l border-ash/40 flex flex-col relative w-96 shrink-0"
    data-testid="artifacts-panel"
  >
    <div
      class="absolute top-0 left-0 w-1 h-full cursor-col-resize z-50 hover:bg-gold/50 transition-colors after:absolute after:inset-y-0 after:-left-1 after:w-2"
      data-testid="artifacts-resize-handle"
    />
    <div
      class="flex items-center justify-between p-4 border-b border-ash/40 shrink-0"
    >
      <h3
        class="text-sm font-semibold text-white"
      >
        Artifacts
      </h3>
      <button
        aria-label="Collapse artifacts panel"
        class="p-1.5 text-silver hover:text-white hover:bg-ash/20 transition-colors duration-150"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-4 space-y-4"
      data-testid="artifacts-grid"
    >
      <p
        class="text-xs text-silver/60 text-center py-8"
      >
        No artifacts to display
      </p>
    </div>
  </div>
</div>
`;
